[gd_scene load_steps=27 format=3 uid="uid://c78mcnowa58pg"]

[ext_resource type="Script" path="res://bathroom/bathroom.gd" id="1_6ydqp"]
[ext_resource type="Texture2D" uid="uid://ddpbvgqd36uec" path="res://bathroom/Untitled_Artwork (25).png" id="2_4m42d"]
[ext_resource type="PackedScene" uid="uid://cv1x731ovllyw" path="res://pelican/pelican.tscn" id="3_wkrgc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlned"]
size = Vector2(120.5, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjvmh"]
size = Vector2(538.5, 188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fd7e7"]
size = Vector2(172, 288)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pko3q"]
size = Vector2(470, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1dex"]
size = Vector2(344, 171)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dych1"]
size = Vector2(706.5, 239)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4ckc"]
size = Vector2(200, 785)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4yj4v"]
size = Vector2(636, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lctpo"]
size = Vector2(45.5, 394.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11p6r"]
size = Vector2(279.5, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4dcyg"]
size = Vector2(462, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xx1kc"]
size = Vector2(172, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buk6o"]
size = Vector2(20, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgrsy"]
size = Vector2(44, 412)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tfxe"]
size = Vector2(608, 94)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bxad"]
size = Vector2(164, 165)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnd44"]
size = Vector2(445.5, 108.525)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t46x2"]
size = Vector2(49, 244.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3n4j"]
size = Vector2(399.5, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnloi"]
size = Vector2(49, 237)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sd6gx"]
size = Vector2(717, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04klo"]
size = Vector2(58.5, 194)

[sub_resource type="CircleShape2D" id="CircleShape2D_iygdn"]
radius = 43.2897

[node name="Bathroom" type="Node2D"]
script = ExtResource("1_6ydqp")

[node name="pool_bathroom" type="Sprite2D" parent="."]
position = Vector2(775, 478.375)
scale = Vector2(0.639669, 0.57509)
texture = ExtResource("2_4m42d")

[node name="walls" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2(58.25, 531)
shape = SubResource("RectangleShape2D_qlned")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2(1008.75, 503)
shape = SubResource("RectangleShape2D_qjvmh")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls"]
position = Vector2(84, 808)
shape = SubResource("RectangleShape2D_fd7e7")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls"]
position = Vector2(404, 927.5)
shape = SubResource("RectangleShape2D_pko3q")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="walls"]
position = Vector2(400, 750.5)
shape = SubResource("RectangleShape2D_b1dex")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="walls"]
position = Vector2(988.75, 781.5)
shape = SubResource("RectangleShape2D_dych1")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="walls"]
position = Vector2(1449, 544)
shape = SubResource("RectangleShape2D_y4ckc")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="walls"]
position = Vector2(1233, -13)
shape = SubResource("RectangleShape2D_4yj4v")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="walls"]
position = Vector2(913.75, 200.75)
shape = SubResource("RectangleShape2D_lctpo")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="walls"]
position = Vector2(433.25, 636.5)
shape = SubResource("RectangleShape2D_11p6r")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="walls"]
position = Vector2(518, 575)
rotation = -0.269135
shape = SubResource("RectangleShape2D_4dcyg")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="walls"]
position = Vector2(656, 576)
shape = SubResource("RectangleShape2D_xx1kc")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="walls"]
position = Vector2(1269, 371)
shape = SubResource("RectangleShape2D_buk6o")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="walls"]
position = Vector2(12, 196)
shape = SubResource("RectangleShape2D_bgrsy")

[node name="pool_pipes" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="pool_pipes"]
position = Vector2(428, 450)
shape = SubResource("RectangleShape2D_7tfxe")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="pool_pipes"]
position = Vector2(204, 569)
shape = SubResource("RectangleShape2D_2bxad")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="pool_pipes"]
position = Vector2(481.307, 494.616)
rotation = -0.279453
shape = SubResource("RectangleShape2D_bnd44")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="pool_pipes"]
position = Vector2(199.5, 770.75)
shape = SubResource("RectangleShape2D_t46x2")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="pool_pipes"]
position = Vector2(422.25, 866.5)
shape = SubResource("RectangleShape2D_h3n4j")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="pool_pipes"]
position = Vector2(603.5, 726)
shape = SubResource("RectangleShape2D_hnloi")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="pool_pipes"]
position = Vector2(986.5, 630.5)
shape = SubResource("RectangleShape2D_sd6gx")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="pool_pipes"]
position = Vector2(1314.75, 509)
shape = SubResource("RectangleShape2D_04klo")

[node name="pelican" parent="." instance=ExtResource("3_wkrgc")]
position = Vector2(1442, 80)

[node name="collectable" type="Area2D" parent="."]
position = Vector2(94, 351)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="collectable"]
shape = SubResource("CircleShape2D_iygdn")

[node name="Sprite2D" type="Sprite2D" parent="collectable"]

[connection signal="body_entered" from="pool_pipes" to="." method="_on_pool_pipes_body_entered"]
[connection signal="body_exited" from="pool_pipes" to="." method="_on_pool_pipes_body_exited"]
[connection signal="body_entered" from="collectable" to="." method="_on_collectable_body_entered"]
